add draw scripts for ics

--- a/set_analyze/draw_sc.ipynb
+++ b/set_analyze/draw_sc.ipynb
@@ -18,7 +18,7 @@
     "from matplotlib.pyplot import MultipleLocator\n",
     "from matplotlib import ticker\n",
     "\n",
-    "db_path = '/nfs/home/zhangchuanqi/lvna/for_xs/catlog/single-profiling/xalancbmk/l3-8/hm.db'\n",
+    "db_path = '/nfs/home/zhangchuanqi/lvna/for_xs/catlog/newdb50M-single-profiling/zeusmp/l3-5/hm.db'\n",
     "con = sqlite3.connect(db_path)\n",
     "cur = con.cursor()"
    ]
@@ -29,34 +29,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_cnt10_query = \"SELECT SETIDX,count(*) FROM HitMissTrace group by SETIDX ORDER BY count(*) DESC LIMIT 10\"\n",
+    "new_q = 'SELECT REQID,ISMISS,SITE,hm.STAMP,hm.tag,hp.wayidx,hm.ID FROM HitMissTrace hm LEFT JOIN HitPosTrace hp ON hm.STAMP=hp.STAMP WHERE hp.ISINS=0 ORDER BY hm.ID LIMIT 20;'\n",
     "\n",
-    "f = cur.execute(max_cnt10_query)\n",
-    "max_setidx_cnt = [x for x in f]\n",
-    "print(max_setidx_cnt)"
+    "a_q = 'SELECT ISMISS,SITE,hm.STAMP,hp.wayidx,hm.ID,ISINS FROM HitMissTrace hm OUTER JOIN HitPosTrace hp ON hm.STAMP=hp.STAMP '\\\n",
+    "    'where ismiss=1 ORDER BY hm.ID LIMIT 20;'\n",
+    "\n",
+    "f = cur.execute(a_q)\n",
+    "out_res = [x for x in f]\n",
+    "print(out_res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 1 1 1 2 2 2 3 3 3 4 4 4 5 5 5]\n",
+      "[0 1 2 3 4 5 0 1 2 3 4 5 0 1 2 3 4 5]\n",
+      "[1 5 9]\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "[[1 0]\n",
+      " [3 2]\n",
+      " [5 4]]\n"
+     ]
+    }
+   ],
    "source": [
-    "max_seti = max_setidx_cnt[0][0]\n",
-    "max_seti_cnt = max_setidx_cnt[0][1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_seti_hitmiss(cur,seti):\n",
-    "    query = f\"SELECT ISMISS FROM HitMissTrace WHERE SETIDX={seti}\"\n",
-    "    f = cur.execute(query)\n",
-    "    cnt_list = [x[0] for x in f]\n",
-    "    return cnt_list\n"
+    "import numpy as np\n",
+    "a = np.arange(6)\n",
+    "\n",
+    "b = np.repeat(a, 3)\n",
+    "print(b)\n",
+    "c = np.tile(a,3)\n",
+    "print(c)\n",
+    "\n",
+    "na = a.reshape(3,2)\n",
+    "\n",
+    "print(a.reshape(3,2).sum(axis=1))\n",
+    "\n",
+    "print(na)\n",
+    "print(np.flip(na,axis=1))"
    ]
   },
   {
@@ -68,52 +86,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(115711960,)]\n"
+      "0.0000%\n",
+      "6.2500%\n",
+      "12.5000%\n",
+      "18.7500%\n",
+      "25.0000%\n",
+      "31.2500%\n",
+      "37.5000%\n",
+      "43.7500%\n",
+      "50.0000%\n",
+      "56.2500%\n",
+      "62.5000%\n",
+      "68.7500%\n",
+      "75.0000%\n",
+      "81.2500%\n",
+      "87.5000%\n",
+      "93.7500%\n"
      ]
     }
    ],
    "source": [
-    "all_set = 16384\n",
-    "class SaturatedInteger:\n",
-    "    def __init__(self, val, lo, hi):\n",
-    "        self.real, self.lo, self.hi = val, lo, hi\n",
-    "\n",
-    "    def __add__(self, other):\n",
-    "        return min(self.real + other.real, self.hi)\n",
-    "\n",
-    "    def __sub__(self, other):\n",
-    "        return max(self.real - other.real, self.lo)\n",
-    "\n",
-    "    def isSaturated(self):\n",
-    "        return self.real == self.hi\n",
-    "    def isLowSaturated(self):\n",
-    "        return self.real == self.lo\n",
-    "\n",
-    "    def isHighHalf(self):\n",
-    "        return self.real > (self.hi + self.lo)/2\n",
-    "    def idLowHalf(self):\n",
-    "        return self.real <= (self.hi + self.lo)/2\n",
-    "\n",
-    "    def isHighPortion(self,portion):\n",
-    "        return self.real > self.hi*portion + self.lo*(1-portion)\n",
-    "    def isLowPortion(self,portion):\n",
-    "        return self.real <= self.hi*portion + self.lo*(1-portion)\n",
-    "\n",
-    "    def __get__(self):\n",
-    "        return self.real\n",
-    "    def __set__(self, val):\n",
-    "        if val > self.hi:\n",
-    "            self.real = self.hi\n",
-    "        elif val < self.lo:\n",
-    "            self.real = self.lo\n",
-    "        else:\n",
-    "            self.real = val\n",
-    "\n",
-    "max_time_query = \"SELECT max(STAMP) FROM HitMissTrace\"\n",
-    "\n",
-    "f = cur.execute(max_time_query)\n",
-    "out_res = [x for x in f]\n",
-    "print(out_res)"
+    "grow_len = 32\n",
+    "for i in range(grow_len):\n",
+    "    print(f\"{i/grow_len:.4%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "a = 'fullgrow6in32'\n",
+    "if a == 'atd' or re.search(r'fullgrow(\\d+)in16',a):\n",
+    "    print('match')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "1 [9, 10, 11, 12, 13, 14, 15, 16]\n",
+      "2 [17, 18, 19, 20, 21, 22, 23, 24]\n",
+      "3 [25, 26, 27, 28, 29, 30, 31, 32]\n",
+      "4 [33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "5 [41, 42, 43, 44, 45, 46, 47, 48]\n",
+      "6 [49, 50, 51, 52, 53, 54, 55, 56]\n",
+      "7 [57, 58, 59, 60, 61, 62, 63, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "full_t = list(range(1, 64+1))\n",
+    "for i in range(8):\n",
+    "    p = i\n",
+    "    x = full_t[p*8: (p+1)*8]\n",
+    "    print(i,x)"
    ]
   }
  ],
@@ -133,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
