--- a/tryoutcsv.ipynb
+++ b/tryoutcsv.ipynb
@@ -158,6 +158,47 @@
     "    mean_df.loc['avg'] = df.mean()\n",
     "    print(mean_df.to_string(index=False,header=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   cpu0.ipc  cpu1.ipc\n",
+      "0         1         2\n",
+      "1         1         2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "new_dict = {\n",
+    "    'cpu0.ipc':1,\n",
+    "    'cpu1.ipc':2,\n",
+    "}\n",
+    "df = pd.DataFrame()\n",
+    "\n",
+    "new_df = pd.DataFrame(new_dict,index=[0])\n",
+    "new_1_df = pd.DataFrame(new_dict,index=[0])\n",
+    "\n",
+    "a_df = pd.concat([df,new_df,new_1_df],ignore_index=True)\n",
+    "print(a_df)\n",
+    "len(a_df)\n"
+   ]
   }
  ],
  "metadata": {
@@ -176,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
